fix the layout of the search bar
was overlapping the results in some resolutions

--- a/app/assets/stylesheets/deckhand/index.css.scss
+++ b/app/assets/stylesheets/deckhand/index.css.scss
@@ -4,6 +4,7 @@ body {
 
 #search {
   position: fixed;
+  width: 100%;
 
   .form-group {
     position: relative;
